# make_sps

./: .gitignore  CHANGELOG.md  README.md  hwp_test.ipynb  index.html  ollama.toml  project.yaml  project_example.yaml  pyproject.toml  run.py  별첨1-14. SW기술문서-12 소프트웨어산출물명세서(SPS).hwp  별첨1-14. SW기술문서-12 소프트웨어산출물명세서(SPS).hwpx
app/: app.py  parser.py
app/environments/: env.py
app/gui/: tkinter_app.py
app/hwp/: hwpaction.py  make_sps_hwp.py
app/hwpx/: __init__.py  hwpx.py  make_sps_hwpx.py
app/parser/: code__counter.py  code_counter.py  get_file_description.py  parser.py  project_yaml_parser.py
app/schema/: constants.py  enums.py  filedata.py  web_api.py
app/temp/: gui_tkinter.py
app/util/: code__counter.py  get_file_description.py  hwp_test.ipynb  hwpaction.py  image_details.py  make_sps_hwp.py  ollama.py  section0.xml  util.py
resources/: gui.html  index.html  section1.xml  styles.css  template.hwp
resources/template/: settings.xml
resources/template/Contents/: content.hpf  header.xml
resources/template/Preview/: PrvText.txt
static/: index.html
temp/11111/template/Contents/: section0.xml
template/Contents/: section0.xml
test/: test_leading_multiline_comments.py  test_loc.py
tests/: test_hello.py
typings/pyhwpx/: __init__.pyi  core.pyi  fonts.pyi  param_helpers.pyi  run_methods.pyi  version.pyi
